--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -19,6 +19,9 @@
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
+  <!-- For Enabling Battery Heath -->
+  <bool name="config_supportBatteryHealth">true</bool>
+    
   <!-- Battery Health -->
   <string name="config_batDesCap">/sys/class/power_supply/bms/charge_full</string>
   <string name="config_batCurCap">/sys/class/power_supply/bms/charge_now_raw</string>
